	* Follow-up to #14733: Improvements to Backend skin - Fixed typo
	* Fixed bug #14733: Improvements to Backend skin (Thanks to Steffen Gebert)

2010-06-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14567: htmlArea RTE: RTE is greyed out and has no "styles" in page module QuickEdit
	* Fixed bug #14746: htmlArea RTE: TableOperations: Label for "Headers" has a colon in excess

2010-06-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13874: NULL reference when using hook in class.t3lib_utility_client.php (Thanks to Steffen Mueller)
	* Fixed bug #14717: [Usability] Add delay to close the context menu
	* Fixed bug #14016: typo in class.t3lib_tcemain.php (Thanks to Vladimir Podkovanov)

2010-06-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14737: htmlArea RTE: Missing labels for SelectFont extension
	* Fixed bug #14738: htmlArea RTE: Cleaning dead scripts
	* Fixed bug #14622: htmlArea RTE: Drop down boxes have no width when displayed with feeditadvanced

2010-06-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14723: htmlArea RTE: JS errors block RTE usage in IE6 and IE7 (Thanks to Jo Hasenau)
	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
	* Updated htmlArea RTE version to 2.0.0

2010-06-14  Peter Niederlag  <netservice@niekom.de>

	* Cleanup, #14660: add hint on required rewrite for compression in config_default.php

2010-06-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #11447: Unwanted control fields exported in CSV file (Thanks to Andreas Lappe)

2010-06-14  Benjamin Mack  <benni@typo3.org>

	* Followup to #14324: Feature: Add spriteGeneratorAPI to support the new sprite-icon-api - Renamed array, added functionality to add TCA type icons from Extensions, allow changes in core icons to trigger cache clearing (Thanks to Steffen Ritter)
	* Followup to #14465: Make use of the new Sprite API throughout the TYPO3 Core Backend - Typo in IRRE (Thanks to Steffen Gebert)
